test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/libraries/same_label_same_fun.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  static
  int
  identifier(f)
  (
  void
  )
  {
  goto
  identifier(x)
  ;
  return
  const int(0)
  ;
  identifier(x)
  :
  return
  const int(2)
  ;
  }
  int
  identifier(f_caller)
  (
  void
  )
  {
  return
  identifier(f)
  (
  )
  ;
  }
